--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,21 @@ Maturaarbeit.pdf
 Maturaarbeit.synctex.gz
 
 *.toc
+
+Maturaarbeit.blg
+
+Maturaarbeit.bbl
+
+Maturaarbeit.glg
+
+Maturaarbeit.glo
+
+Maturaarbeit.gls
+
+Maturaarbeit.idx
+
+Maturaarbeit.ist
+
+Maturaarbeit.out
+
+Maturaarbeit.xdy
